--- a/src/static/html/index.html
+++ b/src/static/html/index.html
@@ -469,6 +469,7 @@
                                 width="35%"
                                 :visible.sync="privateKeyDialogVisible"
                                 :close-on-click-modal="false"
+                                :before-close="clearNewAccountHexPrivateKey"
                                 :show-close="false"
                                 :close-on-press-escape="false">
                             <div class="block" style="margin-bottom: 15px;">
